--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
 
             <div class="cta-holder row gx-md-3 gy-3 gy-md-0">
               <div class="col-12 col-md-auto">
-                <a class="btn btn-primary w-100" style="padding-right: 1.75 rem;"
-                  href="https://buy.stripe.com/test_fZecMQbKf0Excs8fYY">
-                  Book now &nbsp; <i class="fas fa-angle-right"></i>
+              <script async src="https://js.stripe.com/v3/pricing-table.js"></script>
+              <stripe-pricing-table pricing-table-id="prctbl_1PeqlE2LMLAZuTxcai6YsNHm"
+              publishable-key="pk_live_51PcScW2LMLAZuTxciL0wlgAFmGkFEqJHaCjmjuZ6L2mM8Ko1yqz1ismKm08RXD7rPsg187MQvEno8VocxScD2tCN00k0ha5KKT">
+              </stripe-pricing-table>
                 </a>
               </div>
               <div class="col-12 col-md-auto">
