--- a/index.html
+++ b/index.html
@@ -52,14 +52,10 @@
 
             <div class="cta-holder row gx-md-3 gy-3 gy-md-0">
               <div class="col-12 col-md-auto">
-              <script async src="https://js.stripe.com/v3/pricing-table.js"></script>
-              <stripe-pricing-table pricing-table-id="prctbl_1PeqlE2LMLAZuTxcai6YsNHm"
-              publishable-key="pk_live_51PcScW2LMLAZuTxciL0wlgAFmGkFEqJHaCjmjuZ6L2mM8Ko1yqz1ismKm08RXD7rPsg187MQvEno8VocxScD2tCN00k0ha5KKT">
-              </stripe-pricing-table>
-                </a>
+                <a class="btn btn-primary w-100" href="/pricing.html">Book now</a>
               </div>
               <div class="col-12 col-md-auto">
-                <a class="btn btn-secondary scrollto w-100" href="#benefits-section">Learn More</a>
+                <a class="btn btn-secondary scrollto w-100" href="#benefits-section">Learn more</a>
               </div>
             </div><!--//cta-holder-->
 
@@ -72,7 +68,6 @@
               APAC<br>Champion
             </div>
           </div><!--//book-cover-holder-->
-          <!-- <div class="text-center"><a class="theme-link scrollto" href="#reviews-section"></a></div> -->
         </div><!--col-->
       </div><!--//row-->
     </div><!--//container-->
@@ -132,13 +127,13 @@
                 <li><i class="fas fa-check-circle me-2"></i>Reviews of past games</li>
                 <li><i class="fas fa-check-circle me-2"></i>Constructing and advising a plan for improvement</li>
               </ul>
-                </a>
-              </div>
-            </div><!--//key-points-->
+              </a>
+            </div>
+          </div><!--//key-points-->
 
-          </div><!--//col-12-->
-        </div><!--//row-->
-      </div><!--//single-col-max-->
+        </div><!--//col-12-->
+      </div><!--//row-->
+    </div><!--//single-col-max-->
     </div><!--//container-->
   </section><!--//content-section-->
 
@@ -215,7 +210,7 @@
           </div><!--//inner-->
         </div><!--//item-->
       </div><!--//row-->
-      </div>
+    </div>
     </div><!--//container-->
   </section><!--//reviews-section-->
 
