Add the arrow thing

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 
             <div class="cta-holder row gx-md-3 gy-3 gy-md-0">
               <div class="col-12 col-md-auto">
-                <a class="btn btn-primary w-100" href="/pricing.html">Book now</a>
+                <a class="btn btn-primary w-100" href="/pricing.html">Book now &nbsp; <i class="fas fa-angle-right"></i>
+                </a>
               </div>
               <div class="col-12 col-md-auto">
                 <a class="btn btn-secondary scrollto w-100" href="#benefits-section">Learn more</a>
