--- a/pricing.html
+++ b/pricing.html
@@ -56,6 +56,8 @@
             </div><!--//author-profile-->
             <h2 class="section-heading text-center text-white mb-3">About Me</h2>
             <div class="author-bio single-col-max mx-auto">
+                <p>You can find me at kirania1 on discord. Contact me once you've booked a session, or if you have any questions!
+                </p>
                 <p>I've recently competed and won the World Cup APAC regionals. I've hit a peak of rank 1 in competitve.
                     I hold
                     multiple
