--- a/pricing.html
+++ b/pricing.html
@@ -54,21 +54,17 @@
             <div class="author-profile text-center mb-5">
                 <img class="author-pic" src="assets/images/kirania-profile.png" alt="image">
             </div><!--//author-profile-->
-            <h2 class="section-heading text-center text-white mb-3">About Me</h2>
+            <h2 class="section-heading text-center text-white mb-3">About My Coaching</h2>
             <div class="author-bio single-col-max mx-auto">
-                <p>You can find me at kirania1 on Discord. Contact me once you've booked a session, or if you have any questions!
+                <p>Find me at kirania1 on Discord and Contact me once you've booked a session, or if you have any questions!
                 </p>
-                <p>I've recently competed and won the World Cup APAC regionals. I've hit a peak of rank 1 in competitve.
-                    I hold
-                    multiple
-                    world records including the highest official NMPZ winstreak on any map with 126 on Arbitrary World.
+                <p>For best convenience I organise all my sessions on Discord and the sessions are all done in voice calls preferably through Discord.
+                     Most often my students will screenshare their game in the voice call and I give advice over their gameplay. I have found this to be the most 
+                    effective coaching method but I am willing to spend the sessions with me screensharing my game, playing 1v1s or in others ways that players are interested in.
                 </p>
-                <p> I am skilled and knowledgeable at all facets of Geoguessr such as car and coverage meta, bollards,
-                    poles,
-                    languages,
-                    signage, vegetation, architecture and more. I specialise in NMPZ country streaking, but I'm also
-                    strong at
-                    regionguessing, NM and moving and can teach those areas too.</p>
+                <p> If you are interested in longer packages then the ones offered (for a slightly cheaper price) that can be coordinated, just contact me and ask!
+                     And every player can tailor their coaching experience to whatever they feel they'd like they want most help with, whether it be Moving, No Move, NMPZ
+                     or focusing on learning all the clues for regionguessing particular regions or countries.
                 <div class="author-links text-center pt-4">
                     <h5 class="text-white mb-4">Socials/IGN</h5>
                     <ul class="social-list list-unstyled">
